# cllm

./: CMakeLists.txt  Makefile  README.md  deserialize.c  deserialize.h  main.c  serialize.py  tensors.c  tensors.h
src/: debug.h  deserialize.c  deserialize.h  layers.c  layers.h  main.c  model.c  model.h  tensor_ops.cu  tensor_ops.cuh  tensors.c  tensors.h  transformer.c  transformer.h
